--- a/Code/Laravel/composer.json
+++ b/Code/Laravel/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "5.1.*",
         "laravelcollective/html": "5.1.*",
         "maatwebsite/excel": "~2.1.0",
+        "barryvdh/laravel-dompdf": "0.6.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
